# wireforge

./: .gitattributes  .gitignore  .prettierignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: agent_surface.rs  canonical.rs  collection_store.rs  commands.rs  curl.rs  environments.rs  error.rs  github.rs  http_engine.rs  id.rs  importer.rs  lib.rs  main.rs  model.rs  postman.rs  secret_resolver.rs  theme_store.rs  variable_resolver.rs  vcs.rs  workspace.rs
src/lib/: AuthEditor.svelte  CommandPalette.svelte  ConflictPanel.svelte  CurlImport.svelte  EnvManager.svelte  GitHubAuth.svelte  GitPanel.svelte  ImportReview.svelte  KeyValueEditor.svelte  RequestEditor.svelte  ResponseViewer.svelte  Settings.svelte  Sidebar.svelte  ThemeEditor.svelte  theme.ts  types.ts
themes/: dark.wireforge.theme.json  soft-light.wireforge.theme.json
